# tools-Propaga

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  converter.cpp  converter.h  dataproc.cpp  makefile  tools-Propaga.sln
bunch-generator/: BuGe.cpp  BuGe.h  NumberGenerator.cpp  NumberGenerator.h  bunch-generator.cpp  bunch-generator.vcxproj  bunch-generator.vcxproj.filters  makefile
converter/: converter.cpp  converter.h  converter.sln  converter.vcxproj  converter.vcxproj.filters  makefile
converter/scripts-converter/: Converter_Script.sh  preprocess.sh
dataproc/: dataproc.cpp  dataproc.sln  dataproc.vcxproj  dataproc.vcxproj.filters
dataproc/scripts-dataproc/: Dataproc_Emit.sh  Dataproc_MPIemit.sh
examples/: scan-parameters_input.json
revert-lines/: makefile  revert-lines.cpp  revert-lines.vcxproj  revert-lines.vcxproj.filters
scan-columns/: makefile  scan-columns.cpp  scan-columns.vcxproj  scan-columns.vcxproj.filters
scan-parameters/: makefile  scan-parameters.cpp
scramble-lines/: makefile  scramble-lines.cpp  scramble-lines.vcxproj  scramble-lines.vcxproj.filters
scripts-converter/: Converter_TrackXZ.sh  angle_scanner_10to300mrad.sh  energy_scanner_1to10MeV.sh  energy_scanner_5to50MeV.sh  scanAngle.sh
scripts-dataproc/: Dataproc_Tracking.sh  Dataproc_X.sh  Dataproc_Y.sh
seleziona-particelle/: makefile  seleziona-particelle.vcxproj  seleziona-particelle.vcxproj.filters  seleziona.cpp  seleziona.h
sum-columns/: makefile  sum-columns.cpp  sum-columns.vcxproj  sum-columns.vcxproj.filters
